# ngin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ClassHierarchyDiagram.mdj  LICENSE  README.md  calc_core_project_lines.sh  calc_lines.sh  calc_whole_project.sh
docs/: Doxyfile.in  brief.txt
example_projects/: controlls.hpp  main.cpp  utils.cpp
example_projects/iOS/iOS/: Bridging-Header.h  EAGLView.h  EAGLView.m  MenuController.swift  Renderer.h  Renderer.mm  SceneViewController.h  SceneViewController.mm
example_projects/ios/iOS/: AppDelegate.h  AppDelegate.m  main.m
example_projects/ios/iOS.xcodeproj/: project.pbxproj
example_projects/ios/ngin-example/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
example_projects/ios/ngin-example.xcodeproj/: project.pbxproj
example_projects/ios/ngin_ios.xcodeproj/: project.pbxproj
example_projects/mac/: controlls.cpp  controlls.hpp  example_geometry.h  main.cpp  utils.cpp  utils.hpp
example_projects/mac/ngin_mac.xcodeproj/: project.pbxproj
example_projects/ngin_mac.xcodeproj/: project.pbxproj
example_projects/ngin_mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
faced_problems/: field_access_solution.cpp
models/: classroom.mtl
models/classroom/: classroom.mtl
models/teapot/: teapot.mtl
ngin/: config.hpp  umbrellaHeader.hpp
ngin.xcodeproj/: project.pbxproj
ngin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ngin.xcodeproj/xcshareddata/xcschemes/: ngin_ios.xcscheme  ngin_ios_arm64.xcscheme  ngin_mac.xcscheme
ngin/base/: ngin.cpp
ngin/rendering/: deferredRender.cpp  deferredRender.hpp  forwardRender.cpp  lightSourcesRender.cpp  lightSourcesRender.hpp  modelRender.cpp  render.cpp  render.hpp  reusableGeometry.hpp  shadowRender.cpp  shadowRender.hpp
ngin/rendering/other/: framebuffer.hpp  renderbuffer.cpp  renderbuffer.hpp
ngin/rendering/postprocessing/: gaussianBlurPostprocessRender.cpp  postprocessRender.cpp  vignettePostprocessRender.hpp
ngin/resources/: resource.cpp  resource.hpp
ngin/scene/: cubemap.cpp  cubemap.hpp  cubemapArray.cpp  cubemapArray.hpp  drawable.cpp  drawable.hpp  geometry.cpp  geometry.hpp  scene.cpp  scene.hpp  texture.hpp  textureArray.cpp  textureUtilities.cpp  textureUtilities.hpp  vertex.hpp
ngin/scene/camera/: camera.hpp  orthographicCamera.cpp  orthographicCamera.hpp  perspectiveCamera.cpp
ngin/scene/lights/: directionalLight.hpp  light.hpp  pointLight.cpp
ngin/shaders/: constantsDefinitions.glsl
ngin/shaders/deferred_render/: g_buf_vshader.glsl  lighting_fshader.glsl  lighting_vshader.glsl
ngin/shaders/postprocess/: pass_trough_vshader.glsl  scale_fshader.glsl
ngin/shaders/shadow_mapping/: sm_point_light_fshader.glsl
ngin/utils/: loader.hpp  proxyOGL.hpp  utils.hpp
source_code/: config.hpp  umbrellaHeader.hpp
source_code/base/: ngin.cpp  ngin.hpp
source_code/base/ogl/: nginOGL.cpp  nginOGL.hpp
source_code/other/: size.hpp
source_code/rendering/: DLShadowRender.cpp  DLShadowRender.hpp  deferredRender.cpp  deferredRender.hpp  forwardRender.cpp  forwardRender.hpp  framebuffer.cpp  framebuffer.hpp  lightSourcesRender.cpp  lightSourcesRender.hpp  modelRender.hpp  postprocessDrawer.cpp  postprocessDrawer.hpp  render.cpp  render.hpp  renderbuffer.cpp  renderbuffer.hpp  reusableGeometry.hpp  shadowRender.cpp  shadowRender.hpp
source_code/rendering/ogl/: deferredRenderOGL.cpp  deferredRenderOGL.hpp  forwardRenderOGL.cpp  forwardRenderOGL.hpp  framebufferOGL.cpp  framebufferOGL.hpp  lightSourceRenderOGL.cpp  lightSourceRenderOGL.hpp  postprocessDrawerOGL.cpp  postprocessDrawerOGL.hpp  renderbufferOGL.cpp  renderbufferOGL.hpp
source_code/rendering/other/: framebuffer.cpp  framebuffer.hpp  renderbuffer.cpp  renderbuffer.hpp
source_code/rendering/postprocessing/: gaussianBlurPostprocessRender.hpp  postprocessRender.hpp  vignettePostprocessRender.cpp  vignettePostprocessRender.hpp
source_code/rendering/shaders/: deferredLightingShader.cpp  deferredLightingShader.hpp  deferredShader.cpp  deferredShader.hpp  forwardShader.cpp  forwardShader.hpp  lightSourceDrawerShader.cpp  lightSourceDrawerShader.hpp  shader.cpp  shader.hpp
source_code/resources/: resource.cpp  resource.hpp  resourceCoordinator.cpp  resourceCoordinator.hpp  resourceCoordinatorOGL.cpp  resourceCoordinatorOGL.hpp
source_code/scene/: cubemap.cpp  cubemap.hpp  cubemapArray.cpp  cubemapArray.hpp  drawable.cpp  drawable.hpp  geometry.cpp  geometry.hpp  material.cpp  material.hpp  model.cpp  model.hpp  positionedObject.hpp  scene.cpp  scene.hpp  sceneNode.cpp  sceneNode.hpp  texture.cpp  texture.hpp  textureArray.hpp  vertex.hpp
source_code/scene/camera/: camera.cpp  camera.hpp  orthographicCamera.cpp  orthographicCamera.hpp  perspectiveCamera.cpp  perspectiveCamera.hpp
source_code/scene/lights/: directionalLight.cpp  directionalLight.hpp  light.cpp  light.hpp  pointLight.cpp  pointLight.hpp  spotLight.cpp  spotLight.hpp
source_code/scene/ogl/: drawableOGL.cpp  drawableOGL.hpp  geometryOGL.cpp  geometryOGL.hpp  materialOGL.cpp  materialOGL.hpp  modelOGL.cpp  modelOGL.hpp  sceneNodeOGL.cpp  sceneNodeOGL.hpp  textureOGL.cpp  textureOGL.hpp
source_code/shaders/: constantsDefinitions.glsl  constantsDefinitions.hpp  functions.glsl  lightDeclarations.glsl  lightDeclarations.hpp  materialDeclarations.glsl  materialDeclarations.hpp  shaderHeaders.hpp
source_code/shaders/common/: shaderHeaders.hpp
source_code/shaders/deferred_render/: g_buf_fshader.glsl  g_buf_vshader.glsl  g_buf_vshader.hpp  lighting_fshader.glsl  lighting_fshader.hpp  lighting_vshader.glsl  lighting_vshader.hpp  quad_fshader.glsl  quad_vshader.glsl
source_code/shaders/forward_render/: fshader.glsl  fshader.hpp  vshader.glsl  vshader.hpp
source_code/shaders/postprocess/: scale_fshader.glsl  vignette_fshader.glsl
source_code/shaders/shadow_mapping/: sm_directional_light_fshader.glsl  sm_directional_light_vshader.glsl  (+2 more)
source_code/utils/: loader.cpp  loader.hpp  proxyOGL.cpp  proxyOGL.hpp  utils.hpp
third-party-libs/: renderdoc.h
(+49 files in other folders)
